--- a/app/src/main/res/layout/activity_vend_upload_goods.xml
+++ b/app/src/main/res/layout/activity_vend_upload_goods.xml
@@ -13,7 +13,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:background="@color/white"
             android:minHeight="?attr/actionBarSize"
             android:paddingBottom="5dp"
@@ -28,6 +28,7 @@
                 android:background="@drawable/nav_close" />
 
             <TextView
+                android:id="@+id/tv_title"
                 style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
