--- a/app/src/main/res/layout/activity_vending_rack_home.xml
+++ b/app/src/main/res/layout/activity_vending_rack_home.xml
@@ -13,8 +13,8 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:layout_height="50dp"
+            android:background="@color/white"
             android:minHeight="?attr/actionBarSize"
             android:paddingBottom="9dp"
             android:paddingRight="@dimen/dp_10"
