--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -88,4 +88,8 @@
     <color name="text_gray">#bfbfbf</color>
     <color name="black_">#000000</color>
     <color name="hint_text_color">#888888</color>
+
+    <color name="bottom_text_color_checked">#FD2741</color>
+    <color name="bottom_text_color_default">#9A9A9A</color>
+    <color name="province_line_border">#C7C7C7</color>
 </resources>
