--- a/app/src/main/res/layout/common_title.xml
+++ b/app/src/main/res/layout/common_title.xml
@@ -4,18 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/top_navigation_bar_height">
 
-    <TextView
-        android:id="@+id/tv_back"
+    <!--<TextView-->
+        <!--android:id="@+id/tv_back"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:drawableLeft="@drawable/selector_text_bg_white_gary"-->
+        <!--android:drawablePadding="4dp"-->
+        <!--android:gravity="center"-->
+        <!--android:paddingLeft="11dp"-->
+        <!--android:text="返回"-->
+        <!--android:textColor="@drawable/selector_textcolor_white_gary"-->
+        <!--android:textSize="16.5sp" />-->
+
+    <ImageView
+        android:id="@+id/iv_back"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
-        android:drawableLeft="@drawable/selector_text_bg_white_gary"
-        android:drawablePadding="4dp"
-        android:gravity="center"
-        android:paddingLeft="11dp"
-        android:text="返回"
-        android:textColor="@drawable/selector_textcolor_white_gary"
-        android:textSize="16.5sp" />
+        android:paddingLeft="@dimen/dp_11"
+        android:paddingRight="@dimen/dp_11"
+        android:src="@drawable/nav_return" />
 
     <TextView
         android:id="@+id/tv_title"
