--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.paging.gridview.PagingGridView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/id_stickynavlayout_innerscrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/dp_11"
     android:horizontalSpacing="2dp"
     android:numColumns="3"
     android:verticalSpacing="2dp">
 
-</GridView>
+</com.paging.gridview.PagingGridView>
