--- a/app/src/main/res/layout/activity_writer_order.xml
+++ b/app/src/main/res/layout/activity_writer_order.xml
@@ -43,7 +43,7 @@
 
         <include
             layout="@layout/has_address"
-            android:visibility="gone" />
+            android:visibility="invisible" />
 
     </LinearLayout>
 
