--- a/app/src/main/res/layout/dialog_goods.xml
+++ b/app/src/main/res/layout/dialog_goods.xml
@@ -68,23 +68,20 @@
                 android:textColor="@color/white" />
         </LinearLayout>
 
-        <ScrollView
+        <com.github.jdsjlzx.recyclerview.LRecyclerView
+            android:id="@+id/rv_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@id/ll_bottom"
             android:layout_below="@id/view_1">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-
-            </LinearLayout>
-        </ScrollView>
+        </com.github.jdsjlzx.recyclerview.LRecyclerView>
 
     </RelativeLayout>
 
     <ImageView
+        android:scaleType="fitXY"
+        android:id="@+id/img_head"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginLeft="10dp"
