--- a/app/src/main/res/layout/activity_writer_order.xml
+++ b/app/src/main/res/layout/activity_writer_order.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    >
 
     <RelativeLayout
         android:id="@+id/rl_top"
@@ -11,6 +11,7 @@
         android:layout_height="50dp">
 
         <ImageView
+            android:id="@+id/img_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -47,101 +48,16 @@
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/ll_goods"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ll_address"
-        android:paddingBottom="@dimen/dp_10"
-        android:paddingTop="@dimen/dp_10">
 
-        <com.atgc.cotton.widget.RoundImageView
-            android:id="@+id/iv_icon"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/person"
-            app:round_borderRadius="8dp"
-            app:round_type="1" />
+   <android.support.v7.widget.RecyclerView
 
-        <TextView
-            android:id="@+id/tv_goods_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_toRightOf="@+id/iv_icon"
-            android:text="ssssss"
-            android:textColor="@color/text_color_black" />
+       android:id="@+id/rv_content"
+       android:layout_below="@id/ll_address"
+       android:layout_above="@id/ll_bottom"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_goods_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/tv_goods_name"
-            android:layout_below="@+id/tv_goods_name"
-            android:layout_marginTop="@dimen/dp_10"
-            android:ellipsize="end"
-            android:maxLines="3"
-            android:text="少时诵诗书所所所所所所少时诵诗书所所所所所所少时诵诗书所所所所所所少时诵诗书所所所所所所少时诵诗书所所所所所所"
-            android:textColor="@color/ios7_white" />
-
-        <TextView
-            android:id="@+id/tv_goods_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/tv_goods_name"
-            android:layout_below="@+id/tv_goods_content"
-            android:layout_marginTop="@dimen/dp_10"
-            android:text="￥20"
-            android:textColor="@color/actionsheet_red" />
-
-        <TextView
-            android:id="@+id/tv_goods_num"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/tv_goods_price"
-            android:text="x1"
-            android:textColor="@color/text_color_black" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/rl_count"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@id/ll_goods"
-        android:background="#F2F6F9">
-
-        <TextView
-            android:id="@+id/tv_all_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:text="￥11"
-            android:textColor="@color/actionsheet_red" />
-
-        <TextView
-            android:id="@+id/tv_all_num"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/tv_all_price"
-            android:text="共1件：合计"
-            android:textColor="@color/ios7_white" />
-
-
-    </RelativeLayout>
-
-    <View
-        android:layout_below="@id/rl_count"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/dp_18"
-        android:background="@color/line_color_gray_d2" />
-
+   </android.support.v7.widget.RecyclerView>
     <LinearLayout
         android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
@@ -175,6 +91,7 @@
         </RelativeLayout>
 
         <Button
+            android:id="@+id/btn_order"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
