--- a/app/src/main/res/layout/activity_shopping_car.xml
+++ b/app/src/main/res/layout/activity_shopping_car.xml
@@ -69,9 +69,9 @@
 
         <ImageView
             android:id="@+id/img_choose"
-            android:src="@drawable/selected"
+            android:src="@drawable/unchecked"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="10dp"
             android:layout_width="25dp"
             android:layout_height="25dp" />
 
@@ -97,9 +97,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/tv_num"
                 android:textColor="@color/edit_red"
                 android:textSize="15sp"
-                android:text="¥ 111"
+                android:text=""
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
