--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -12,15 +12,17 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical">
         <ImageView
+            android:layout_centerVertical="true"
             android:id="@+id/img_choose"
-            android:layout_marginLeft="5dp"
-            android:src="@drawable/selected"
-            android:layout_width="25dp"
-            android:layout_height="25dp" />
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/unchecked"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
 
         <ImageView
+            android:scaleType="fitXY"
             android:layout_toRightOf="@id/img_choose"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="10dp"
             android:id="@+id/iv_icon"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -57,12 +59,12 @@
 
         <TextView
             android:id="@+id/tv_num"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/tv_price"
             android:layout_marginLeft="9dp"
-            android:text="库存"
             android:textColor="@color/text_color_black" />
 
     </RelativeLayout>
