--- a/app/src/main/res/layout/activity_other_player.xml
+++ b/app/src/main/res/layout/activity_other_player.xml
@@ -15,6 +15,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -29,22 +31,22 @@
                 <!--android:src="@drawable/person" />-->
                 <android.opengl.GLSurfaceView
                     android:id="@+id/edit_preview"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true" />
 
                 <include
                     android:id="@+id/item_midle"
                     layout="@layout/item_player_midle"
                     android:layout_width="fill_parent"
                     android:layout_height="220dp"
-                    android:layout_alignParentBottom="true">
-                </include>
+                    android:layout_alignParentBottom="true"></include>
             </RelativeLayout>
 
             <include
                 layout="@layout/item_player_bottom"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"></include>
+                android:layout_height="match_parent"></include>
         </LinearLayout>
     </com.atgc.cotton.widget.MyScrollView>
 
