--- a/app/src/main/res/layout/item_player_bottom.xml
+++ b/app/src/main/res/layout/item_player_bottom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -23,7 +24,7 @@
                 android:src="@drawable/person" />
 
             <TextView
-                android:id="@+id/tv_name"
+                android:id="@+id/tv_nick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7dp"
@@ -36,8 +37,8 @@
                 android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/tv_name"
-                android:layout_below="@+id/tv_name"
+                android:layout_alignLeft="@+id/tv_nick"
+                android:layout_below="@+id/tv_nick"
                 android:text="06-16  17:56" />
 
             <TextView
@@ -52,6 +53,7 @@
                 android:text="18.3万播放" />
 
             <TextView
+                android:id="@+id/tv_focus2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/icon_header"
@@ -66,7 +68,7 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/tv_intro"
+            android:id="@+id/tv_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_11"
@@ -107,6 +109,7 @@
                 android:text="|" />
 
             <RelativeLayout
+                android:id="@+id/rl_share"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1.0"
@@ -149,7 +152,7 @@
             android:scrollbars="none">
 
             <LinearLayout
-                android:id="@+id/container"
+                android:id="@+id/container2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
@@ -158,6 +161,7 @@
         </HorizontalScrollView>
 
         <TextView
+            android:id="@+id/tv_com_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_11"
@@ -165,42 +169,109 @@
             android:drawablePadding="5.5dp"
             android:text="136评论" />
 
-        <ListView
+        <com.atgc.cotton.widget.MyListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
-            android:layout_height="800dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_11"
             android:layout_marginRight="@dimen/dp_11">
 
-        </ListView>
+        </com.atgc.cotton.widget.MyListView>
+
+        <TextView
+            android:id="@+id/tv_qure_more"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#F6F6F6"
+            android:gravity="center"
+            android:text="查看更多"
+            android:textColor="@color/record_progress_blue"
+            android:visibility="gone" />
+
+        <RelativeLayout
+            android:id="@+id/rl_bottom_bar"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_alignParentBottom="true"
+            android:background="#F6F6F6">
+
+            <EditText
+                android:id="@+id/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/btn_comment"
+                android:layout_alignTop="@+id/btn_comment"
+                android:layout_marginLeft="11dp"
+                android:layout_marginRight="11dp"
+                android:layout_toLeftOf="@+id/btn_comment"
+                android:background="@drawable/frame_btn"
+                android:focusable="true"
+                android:hint="我要评论..."
+                android:imeOptions="flagNoExtractUi|flagNoFullscreen|actionDone"
+                android:textColorHint="@color/text_color_gray_a" />
+
+            <Button
+                android:id="@+id/btn_comment"
+                android:layout_width="66dp"
+                android:layout_height="38.5dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="8.25dp"
+                android:layout_marginRight="11dp"
+                android:layout_marginTop="8.25dp"
+                android:background="@drawable/bg_comment"
+                android:text="评论"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <LinearLayout
+                android:id="@+id/bottom_line"
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_below="@+id/btn_comment"
+                android:orientation="horizontal"></LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:layout_alignParentBottom="true"
-        android:background="#F6F6F6">
+    <!--<RelativeLayout-->
+    <!--android:id="@+id/rl_bottom_bar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="47dp"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:background="#F6F6F6">-->
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="11dp"
-            android:layout_marginRight="11dp"
-            android:background="@drawable/frame_btn"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:hint="我要写评论"
-            android:imeOptions="flagNoExtractUi|flagNoFullscreen|actionDone"
-            android:paddingLeft="@dimen/dp_11"
-            android:paddingRight="@dimen/dp_11"
-            android:textColorHint="@color/main_checked_color" />
+    <!--<EditText-->
+    <!--android:id="@+id/editText"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignBottom="@+id/btn_comment"-->
+    <!--android:layout_alignTop="@+id/btn_comment"-->
+    <!--android:layout_marginLeft="11dp"-->
+    <!--android:layout_marginRight="11dp"-->
+    <!--android:layout_toLeftOf="@+id/btn_comment"-->
+    <!--android:background="@drawable/frame_btn"-->
+    <!--android:focusable="true"-->
+    <!--android:hint="我要评论..."-->
+    <!--android:imeOptions="flagNoExtractUi|flagNoFullscreen|actionDone"-->
+    <!--android:textColorHint="@color/text_color_gray_a" />-->
 
-        <LinearLayout
-            android:id="@+id/bottom_line"
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:orientation="horizontal"></LinearLayout>
-    </RelativeLayout>
+    <!--<Button-->
+    <!--android:id="@+id/btn_comment"-->
+    <!--android:layout_width="66dp"-->
+    <!--android:layout_height="38.5dp"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:layout_marginBottom="8.25dp"-->
+    <!--android:layout_marginRight="11dp"-->
+    <!--android:layout_marginTop="8.25dp"-->
+    <!--android:background="@drawable/bg_comment"-->
+    <!--android:text="评论"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:textSize="18sp" />-->
+
+    <!--<LinearLayout-->
+    <!--android:id="@+id/bottom_line"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="1px"-->
+    <!--android:layout_below="@+id/btn_comment"-->
+    <!--android:orientation="horizontal"></LinearLayout>-->
+    <!--</RelativeLayout>-->
 </RelativeLayout>
