--- a/app/src/main/res/drawable/sel_main_setting.xml
+++ b/app/src/main/res/drawable/sel_main_setting.xml
@@ -4,4 +4,6 @@
     <item android:drawable="@drawable/menu_personal_press" android:state_checked="true" />
     <item android:drawable="@drawable/menu_personal_default" android:state_checked="false" />
 
+    <item android:drawable="@drawable/menu_personal_press" android:state_pressed="true" />
+    <item android:drawable="@drawable/menu_personal_default" android:state_pressed="false" />
 </selector>
