--- a/app/src/main/res/layout/item_pro_other_header.xml
+++ b/app/src/main/res/layout/item_pro_other_header.xml
@@ -43,15 +43,15 @@
                 android:textColor="@color/white"
                 android:textSize="19.5sp" />
 
-            <ImageView
-                android:id="@+id/iv_share"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginRight="@dimen/dp_11"
-                android:layout_toLeftOf="@+id/iv_more"
-                android:paddingLeft="@dimen/dp_11"
-                android:paddingRight="@dimen/dp_11"
-                android:src="@drawable/works_share" />
+            <!--<ImageView-->
+                <!--android:id="@+id/iv_share"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_marginRight="@dimen/dp_11"-->
+                <!--android:layout_toLeftOf="@+id/iv_more"-->
+                <!--android:paddingLeft="@dimen/dp_11"-->
+                <!--android:paddingRight="@dimen/dp_11"-->
+                <!--android:src="@drawable/works_share" />-->
 
             <ImageView
                 android:id="@+id/iv_more"
