--- a/app/src/main/res/layout/activity_shopping_car.xml
+++ b/app/src/main/res/layout/activity_shopping_car.xml
@@ -15,8 +15,8 @@
             android:layout_marginLeft="10dp"
             android:id="@+id/img_back"
             android:src="@drawable/nav_return"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:textSize="18sp"
@@ -100,7 +100,7 @@
                 android:id="@+id/tv_num"
                 android:textColor="@color/edit_red"
                 android:textSize="15sp"
-                android:text=""
+                android:text="0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
