--- a/app/src/main/res/layout/has_address.xml
+++ b/app/src/main/res/layout/has_address.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/rl_has_address"
     android:layout_height="80dp">
 
     <LinearLayout
@@ -11,10 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv_name"
             android:text="收货人xxxxxxxxxxxxx  1111111"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/tv_content"
             android:maxLines="2"
             android:ellipsize="end"
             android:text="收货地址 ：广东省广州市啦啦啦啦哈哈哈哈哈哈哈哈哈哈港棉纺织"
