添加版本更新

--- a/app/src/main/res/layout/activity_share_video.xml
+++ b/app/src/main/res/layout/activity_share_video.xml
@@ -111,7 +111,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:text="添加地理位置>" />
+                        android:text="添加地理位置" />
                 </RelativeLayout>
 
                 <LinearLayout
