--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,19 @@
     <dimen name="margin_11dp">11dp</dimen>
     <dimen name="item_height">60dp</dimen>
     <dimen name="item_margin">10dp</dimen>
+    <!-- 字体大小 start -->
+    <dimen name="text_size_36">19.8sp</dimen>
+    <dimen name="text_size_30">16.5sp</dimen>
+    <dimen name="text_size_32">17.6sp</dimen>
+    <dimen name="text_size_28">15.4sp</dimen>
+    <dimen name="text_size_24">13.2sp</dimen>
+    <dimen name="text_size_20">11sp</dimen>
 
+    <dimen name="text_size_small">12.1sp</dimen>
+    <dimen name="text_size_common">13.2sp</dimen>
+    <dimen name="text_size_large">14.3sp</dimen>
+    <dimen name="text_size_more_large">16.5sp</dimen>
+    <!-- 字体大小 end -->
     <dimen name="default_divider_height">1dp</dimen>
     <dimen name="default_divider_padding">4dp</dimen>
 
@@ -34,10 +46,4 @@
     <dimen name="size_60">60dp</dimen>
     <dimen name="circle_image_size_common">42.9dp</dimen>
     <dimen name="spacing_common">14.3dp</dimen>
-
-
-    <dimen name="text_size_small">12.1sp</dimen>
-    <dimen name="text_size_common">13.2sp</dimen>
-    <dimen name="text_size_large">14.3sp</dimen>
-    <dimen name="text_size_more_large">16.5sp</dimen>
 </resources>
