--- a/app/src/main/res/layout/common_title.xml
+++ b/app/src/main/res/layout/common_title.xml
@@ -2,20 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_top_bar"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/top_navigation_bar_height">
+    android:layout_height="match_parent">
 
     <!--<TextView-->
-        <!--android:id="@+id/tv_back"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:drawableLeft="@drawable/selector_text_bg_white_gary"-->
-        <!--android:drawablePadding="4dp"-->
-        <!--android:gravity="center"-->
-        <!--android:paddingLeft="11dp"-->
-        <!--android:text="返回"-->
-        <!--android:textColor="@drawable/selector_textcolor_white_gary"-->
-        <!--android:textSize="16.5sp" />-->
+    <!--android:id="@+id/tv_back"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:drawableLeft="@drawable/selector_text_bg_white_gary"-->
+    <!--android:drawablePadding="4dp"-->
+    <!--android:gravity="center"-->
+    <!--android:paddingLeft="11dp"-->
+    <!--android:text="返回"-->
+    <!--android:textColor="@drawable/selector_textcolor_white_gary"-->
+    <!--android:textSize="16.5sp" />-->
 
     <ImageView
         android:id="@+id/iv_back"
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textColor="@color/white"
+        android:textColor="@color/main_default_color"
         android:textSize="18sp" />
 
     <!--<ImageView-->
@@ -54,7 +54,7 @@
         android:paddingLeft="@dimen/dp_6"
         android:paddingRight="11dp"
         android:text="保存"
-        android:textColor="@color/white"
+        android:textColor="@color/main_default_color"
         android:textSize="16.5sp"
         android:visibility="gone" />
 
