--- a/app/src/main/res/layout/item_pro_other_header.xml
+++ b/app/src/main/res/layout/item_pro_other_header.xml
@@ -109,14 +109,14 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true">
 
-                <TextView
-                    android:id="@+id/tv_msg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/dp_11"
-                    android:background="@drawable/bg_edit_btn"
-                    android:padding="10dp"
-                    android:text="私信" />
+                <!--<TextView-->
+                    <!--android:id="@+id/tv_msg"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginRight="@dimen/dp_11"-->
+                    <!--android:background="@drawable/bg_edit_btn"-->
+                    <!--android:padding="10dp"-->
+                    <!--android:text="私信" />-->
 
                 <TextView
                     android:id="@+id/tv_focu"
