--- a/app/src/main/res/layout/activity_edit_data.xml
+++ b/app/src/main/res/layout/activity_edit_data.xml
@@ -25,18 +25,18 @@
             android:textColor="@color/main_default_color"
             android:textSize="22sp" />
 
-        <TextView
-            android:id="@+id/tv_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="11dp"
-            android:background="@drawable/bg_orange_btn"
-            android:padding="10dp"
-            android:text="保存"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
+        <!--<TextView-->
+        <!--android:id="@+id/tv_save"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_marginRight="11dp"-->
+        <!--android:background="@drawable/bg_orange_btn"-->
+        <!--android:padding="10dp"-->
+        <!--android:text="保存"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:textSize="16sp" />-->
     </RelativeLayout>
 
     <LinearLayout
