--- a/app/src/main/res/layout/activity_video_list.xml
+++ b/app/src/main/res/layout/activity_video_list.xml
@@ -4,18 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/common_title" />
+    <include
+        layout="@layout/common_title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/top_navigation_bar_height" />
 
     <!--<GridView-->
-        <!--android:id="@+id/gv_video"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:drawSelectorOnTop="true"-->
-        <!--android:horizontalSpacing="@dimen/image_thumbnail_spacing"-->
-        <!--android:listSelector="@drawable/em_photogrid_list_selector"-->
-        <!--android:numColumns="auto_fit"-->
-        <!--android:stretchMode="columnWidth"-->
-        <!--android:verticalSpacing="@dimen/image_thumbnail_spacing" />-->
+    <!--android:id="@+id/gv_video"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:drawSelectorOnTop="true"-->
+    <!--android:horizontalSpacing="@dimen/image_thumbnail_spacing"-->
+    <!--android:listSelector="@drawable/em_photogrid_list_selector"-->
+    <!--android:numColumns="auto_fit"-->
+    <!--android:stretchMode="columnWidth"-->
+    <!--android:verticalSpacing="@dimen/image_thumbnail_spacing" />-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_video"
