--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -33,10 +33,6 @@
                 android:textSize="16.5sp" />
         </RelativeLayout>
 
-
-
-
-
     <LinearLayout
         android:id="@+id/ll"
         android:layout_width="match_parent"
@@ -47,15 +43,15 @@
         android:layout_marginTop="40dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_active"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.0"
-            android:drawablePadding="13.5dp"
-            android:drawableTop="@drawable/sel_main_active"
-            android:gravity="center_horizontal"
-            android:text="好友动态" />
+        <!--<TextView-->
+            <!--android:id="@+id/tv_active"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1.0"-->
+            <!--android:drawablePadding="13.5dp"-->
+            <!--android:drawableTop="@drawable/sel_main_active"-->
+            <!--android:gravity="center_horizontal"-->
+            <!--android:text="好友动态" />-->
 
         <TextView
             android:id="@+id/tv_msg"
@@ -67,15 +63,15 @@
             android:gravity="center_horizontal"
             android:text="消息" />
 
-        <TextView
-            android:id="@+id/tv_info"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.0"
-            android:drawablePadding="13.5dp"
-            android:drawableTop="@drawable/sel_main_private"
-            android:gravity="center_horizontal"
-            android:text="私信" />
+        <!--<TextView-->
+            <!--android:id="@+id/tv_info"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1.0"-->
+            <!--android:drawablePadding="13.5dp"-->
+            <!--android:drawableTop="@drawable/sel_main_private"-->
+            <!--android:gravity="center_horizontal"-->
+            <!--android:text="私信" />-->
     </LinearLayout>
 
     <RadioGroup
