购物车数据库操作。 商品评价。

--- a/app/src/main/res/layout/activity_shopping_car.xml
+++ b/app/src/main/res/layout/activity_shopping_car.xml
@@ -29,6 +29,7 @@
 
         <Button
 
+            android:id="@+id/btn_edit"
             android:textColor="@color/white"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
