--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -101,4 +101,5 @@
     <color name="praise_item_default">#333333</color>
     <color name="red_fuwa">#D3000F</color>
     <color name="red_fuwa_alpa_stroke">#ff0012</color>
+    <color name="im_font_color_text_hint">#abb1b6</color>
 </resources>
