--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -66,6 +66,8 @@
 
 
     <TextView
+        android:id="@+id/tv_evaluate"
+        android:text="评价"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_name"
@@ -108,13 +110,13 @@
         android:layout_marginTop="20dp"
         android:background="@color/line_school" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/line"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:text="888宝贝评论" />
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/line"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:text="888宝贝评论" />-->
 
     <ImageView
         android:layout_width="wrap_content"
