--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -66,6 +66,43 @@
             android:layout_alignTop="@+id/tv_price"
             android:layout_marginLeft="9dp"
             android:textColor="@color/text_color_black" />
+        <LinearLayout
+            android:id="@+id/ll_edit"
+            android:gravity="center"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@id/tv_num"
+            android:layout_alignBottom="@id/tv_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/iv_minus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/minus" />
+
+            <EditText
+                android:id="@+id/et_repertory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:imeOptions="actionNext"
+                android:inputType="number"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:singleLine="true"
+                android:maxLength="4"
+                android:text="1"
+                android:textColor="@color/text_color_black"
+                android:textCursorDrawable="@drawable/shape_edittext_cursor" />
+
+            <ImageView
+                android:id="@+id/iv_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/add" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
