--- a/app/src/main/res/values/umeng_socialize_strings.xml
+++ b/app/src/main/res/values/umeng_socialize_strings.xml
@@ -74,6 +74,10 @@
     <string name="main_discover">发现</string>
     <string name="main_near">附近</string>
 
+    <string name="im_friend">好友动态</string>
+    <string name="im_info">消息</string>
+    <string name="im_msg">私信</string>
+
     <string name="share_platform_qq">QQ好友</string>
     <string name="share_platform_zone">QQ空间</string>
     <string name="share_platform_wx">微信好友</string>
