--- a/app/src/main/res/layout/activity_logistics.xml
+++ b/app/src/main/res/layout/activity_logistics.xml
@@ -8,13 +8,13 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/top_navigation_bar_height"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/white"
             android:minHeight="?attr/actionBarSize"
             android:paddingBottom="9dp"
