--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -1,65 +1,237 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background_color"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:id="@+id/rl_top_bar"
         android:layout_width="match_parent"
-        android:background="@color/record_title_bg_default"
         android:layout_height="@dimen/top_navigation_bar_height"
-        >
+        android:background="@color/white">
 
-        <TextView
-            android:id="@+id/tv_back"
+        <ImageView
+            android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:drawableLeft="@drawable/selector_text_bg_white_gary"
-            android:drawablePadding="4dp"
-            android:gravity="center"
-            android:paddingLeft="11dp"
-            android:text="返回"
-            android:textColor="@drawable/selector_textcolor_white_gary"
-            android:textSize="16.5sp" />
+            android:paddingLeft="@dimen/dp_11"
+            android:paddingRight="@dimen/dp_11"
+            android:src="@drawable/nav_return" />
 
         <TextView
-            android:text="个人设置"
-            android:textColor="@color/white"
-            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="18sp" />
+            android:text="个人设置"
+            android:textColor="@color/main_default_color"
+            android:textSize="22sp" />
+    </RelativeLayout>
+    <!--<RelativeLayout-->
+    <!--android:id="@+id/rl_top_bar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:background="@color/record_title_bg_default"-->
+    <!--android:layout_height="@dimen/top_navigation_bar_height"-->
+    <!--&gt;-->
 
-        <ImageView
-            android:id="@+id/iv_set"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:paddingRight="@dimen/dp_10"
-            android:layout_centerVertical="true"
-            android:visibility="gone" />
+    <!--<TextView-->
+    <!--android:id="@+id/tv_back"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:drawableLeft="@drawable/selector_text_bg_white_gary"-->
+    <!--android:drawablePadding="4dp"-->
+    <!--android:gravity="center"-->
+    <!--android:paddingLeft="11dp"-->
+    <!--android:text="返回"-->
+    <!--android:textColor="@drawable/selector_textcolor_white_gary"-->
+    <!--android:textSize="16.5sp" />-->
+
+    <!--<TextView-->
+    <!--android:text="个人设置"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:id="@+id/tv_title"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_centerInParent="true"-->
+    <!--android:textSize="18sp" />-->
+
+    <!--<ImageView-->
+    <!--android:id="@+id/iv_set"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:paddingRight="@dimen/dp_10"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:visibility="gone" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/tv_right"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:gravity="center"-->
+    <!--android:paddingLeft="@dimen/dp_6"-->
+    <!--android:paddingRight="11dp"-->
+    <!--android:text="保存"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:textSize="16.5sp"-->
+    <!--android:visibility="gone" />-->
+
+    <!--</RelativeLayout>-->
+    <RelativeLayout
+        android:id="@+id/rl_cache"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/top_navigation_bar_height"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/personal_bt_selector"
+        android:paddingLeft="16.5dp"
+        android:paddingRight="16.5dp"
+        android:paddingTop="10dp">
 
         <TextView
-            android:id="@+id/tv_right"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16.5dp"
+            android:text="清除缓存"
+            android:textColor="@color/black_"
+            android:textSize="17.5sp" />
+
+        <TextView
+            android:id="@+id/tv_volum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:gravity="center"
-            android:paddingLeft="@dimen/dp_6"
-            android:paddingRight="11dp"
-            android:text="保存"
-            android:textColor="@color/white"
-            android:textSize="16.5sp"
-            android:visibility="gone" />
+            android:text="16.8mb" />
 
     </RelativeLayout>
+
     <RelativeLayout
-        android:layout_marginTop="50dp"
+        android:id="@+id/rl_auth"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/top_navigation_bar_height"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/personal_bt_selector"
+        android:paddingLeft="16.5dp"
+        android:paddingRight="16.5dp"
+        android:paddingTop="10dp"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16.5dp"
+            android:text="个人认证"
+            android:textColor="@color/black_"
+            android:textSize="17.5sp" />
+
+        <TextView
+            android:id="@+id/tv_auth_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="未认证" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_phone"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/top_navigation_bar_height"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/personal_bt_selector"
+        android:paddingLeft="16.5dp"
+        android:paddingRight="16.5dp"
+        android:paddingTop="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16.5dp"
+            android:text="绑定手机"
+            android:textColor="@color/black_"
+            android:textSize="17.5sp" />
+
+        <TextView
+            android:id="@+id/tv_bind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="未绑定"
+            android:textColor="@color/text_color_gray_a" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_pws"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/top_navigation_bar_height"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/personal_bt_selector"
+        android:paddingLeft="16.5dp"
+        android:paddingRight="16.5dp"
+        android:paddingTop="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16.5dp"
+            android:text="登录密码"
+            android:textColor="@color/black_"
+            android:textSize="17.5sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/hp_some_go" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_wallet"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/top_navigation_bar_height"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/personal_bt_selector"
+        android:paddingLeft="16.5dp"
+        android:paddingRight="16.5dp"
+        android:paddingTop="10dp"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16.5dp"
+            android:text="钱包"
+            android:textColor="@color/black_"
+            android:textSize="17.5sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/hp_some_go" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/rl_about"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/top_navigation_bar_height"
+        android:layout_marginTop="24dp"
         android:background="@drawable/personal_bt_selector"
         android:paddingBottom="10dp"
         android:paddingLeft="16.5dp"
@@ -83,13 +255,13 @@
             android:background="@drawable/hp_some_go" />
 
     </RelativeLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="12dp"
         android:layout_marginBottom="1px"
         android:layout_marginTop="1px"
         android:background="@color/background_color" />
-
 
 
     <TextView
