--- a/app/src/main/res/layout/item_order_content.xml
+++ b/app/src/main/res/layout/item_order_content.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/rl_content"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/dp_10"
     android:paddingTop="@dimen/dp_10">
