--- a/app/src/main/res/layout/item_order_head.xml
+++ b/app/src/main/res/layout/item_order_head.xml
@@ -8,6 +8,9 @@
         android:id="@+id/tv_store_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:layout_toLeftOf="@+id/tv_order_state"
         android:textColor="@color/text_color_black"
         android:textSize="@dimen/sp_16" />
 
