--- a/app/src/main/res/layout/item_pro_header.xml
+++ b/app/src/main/res/layout/item_pro_header.xml
@@ -18,8 +18,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
             android:background="@drawable/works_bg_translucent"
+            android:scaleType="centerCrop"
             android:visibility="visible"></ImageView>
 
 
@@ -41,17 +41,20 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:drawablePadding="6dp"
+                android:ellipsize="end"
+                android:maxEms="10"
+                android:singleLine="true"
                 android:textColor="@color/white"
                 android:textSize="19.5sp" />
 
             <!--<ImageView-->
-                <!--android:id="@+id/iv_share"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_alignParentRight="true"-->
-                <!--android:paddingLeft="@dimen/dp_11"-->
-                <!--android:paddingRight="@dimen/dp_11"-->
-                <!--android:src="@drawable/works_share" />-->
+            <!--android:id="@+id/iv_share"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:paddingLeft="@dimen/dp_11"-->
+            <!--android:paddingRight="@dimen/dp_11"-->
+            <!--android:src="@drawable/works_share" />-->
         </RelativeLayout>
 
         <RelativeLayout
