--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -13,25 +13,28 @@
         android:layout_marginTop="40dp"
         android:orientation="vertical">
 
-            <com.atgc.cotton.widget.CircleImageView
-                android:id="@+id/iv_avatar"
-                android:layout_width="83dp"
-                android:layout_height="83dp"
-                android:layout_centerHorizontal="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/person" />
+        <com.atgc.cotton.widget.CircleImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="83dp"
+            android:layout_height="83dp"
+            android:layout_centerHorizontal="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/person" />
 
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/iv_avatar"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="12dp"
-                android:text="时代发生地方"
-                android:textColor="@color/text_color_black"
-                android:textSize="16.5sp" />
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_avatar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp"
+            android:ellipsize="end"
+            android:maxEms="10"
+            android:singleLine="true"
+            android:text="时代发生地方"
+            android:textColor="@color/text_color_black"
+            android:textSize="16.5sp" />
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/ll"
@@ -43,15 +46,15 @@
         android:layout_marginTop="40dp"
         android:orientation="horizontal">
 
-        <!--<TextView-->
-            <!--android:id="@+id/tv_active"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1.0"-->
-            <!--android:drawablePadding="13.5dp"-->
-            <!--android:drawableTop="@drawable/sel_main_active"-->
-            <!--android:gravity="center_horizontal"-->
-            <!--android:text="好友动态" />-->
+        <TextView
+        android:id="@+id/tv_active"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:drawablePadding="13.5dp"
+        android:drawableTop="@drawable/sel_main_active"
+        android:gravity="center_horizontal"
+        android:text="好友动态" />
 
         <TextView
             android:id="@+id/tv_msg"
@@ -63,15 +66,15 @@
             android:gravity="center_horizontal"
             android:text="消息" />
 
-        <!--<TextView-->
-            <!--android:id="@+id/tv_info"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1.0"-->
-            <!--android:drawablePadding="13.5dp"-->
-            <!--android:drawableTop="@drawable/sel_main_private"-->
-            <!--android:gravity="center_horizontal"-->
-            <!--android:text="私信" />-->
+        <TextView
+            android:id="@+id/tv_info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:drawablePadding="13.5dp"
+            android:drawableTop="@drawable/sel_main_private"
+            android:gravity="center_horizontal"
+            android:text="私信" />
     </LinearLayout>
 
     <RadioGroup
