--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -27,6 +27,12 @@
             android:text="关于我们"
             android:textColor="@color/main_default_color"
             android:textSize="22sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_alignParentBottom="true"
+            android:background="@color/line_color_gray_d1"></View>
     </RelativeLayout>
 
     <LinearLayout
