--- a/app/src/main/res/layout/activity_agent_certify.xml
+++ b/app/src/main/res/layout/activity_agent_certify.xml
@@ -26,6 +26,12 @@
             android:text="个人认证"
             android:textColor="@color/main_default_color"
             android:textSize="22sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_alignParentBottom="true"
+            android:background="@color/line_color_gray_d1"></View>
     </RelativeLayout>
 
 
