--- a/app/src/main/res/layout/activity_agent_upload.xml
+++ b/app/src/main/res/layout/activity_agent_upload.xml
@@ -26,6 +26,12 @@
             android:text="上传证件"
             android:textColor="@color/main_default_color"
             android:textSize="22sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_alignParentBottom="true"
+            android:background="@color/line_color_gray_d1"></View>
     </RelativeLayout>
 
 
@@ -63,9 +69,17 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/iv_positive"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:src="@drawable/person" />
+                android:src="@drawable/compose_pic_add" />
+
+            <ImageView
+                android:id="@+id/iv_reverse"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/compose_pic_add" />
         </LinearLayout>
 
         <TextView
@@ -94,9 +108,10 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/iv_handheld"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:src="@drawable/person" />
+                android:src="@drawable/compose_pic_add" />
         </LinearLayout>
     </LinearLayout>
 
